# MctsCheckers

./: .gitignore  CMakeLists.txt  README.md  Spec.md
include/: gameplay.hpp
include/checkers/: actions.cuh  state.hpp
include/checkers/actions/: actions.cuh  directionFunctions.cuh  helperFunctions.cuh  phaseFunctions.cuh  shmStructure.cuh
include/checkers/deviceResources/: batchActionSpace.cuh  batchCheckerState.cuh  batchSimulationResults.cuh
include/cudaUtils/: cudaCompatibility.hpp  errors.cuh  intrinsicsWrappers.cuh  smartPointer.cuh
include/mcts/gpuTree/: deviceTree.hpp  kernels.cuh  mctsTree.hpp
include/resources/: cudaSmartPointer.hpp  errors.hpp
include/tocpuwb/: batchExecutor.cuh  batchQueue.hpp  mcts.hpp  serialization.hpp  tree.hpp
include/togpu/gpuTree/: deviceTree.hpp
src/: gameplay.cpp  main.cpp
src/checkers/: actions.cu  state.cpp
src/checkers/actions/: actions.cu  directionFunctions.cu  helperFunctions.cu  phaseFunctions.cu  shmStructure.cu
src/checkers/deviceResources/: batchActionSpace.cu  batchCheckerState.cu  batchSimulationResults.cu
src/cudaUtils/: intrinsicsWrappers.cu
src/tocpuwb/: batchExecutor.cu  batchQueue.cpp  mcts.cpp  serialization.cpp
